--- a/index.html
+++ b/index.html
@@ -4,12 +4,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=10, user-scalable=yes">
+    <meta name="mobile-web-app-capable" content="yes">
 
     <title>MyApp</title>
 
     <!-- The line below must be kept intact for Sencha Cmd to build your application -->
     <script id="microloader" data-app="934b63f3-5917-47d4-9b38-d132bf6c1c34" type="text/javascript" src="bootstrap.js"></script>
 
+    <style>
+        /* Add this CSS to style your loading overlay */
+        #loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url();
+            background-color: rgba(207, 210, 229, 0.9);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+            color: #269245;
+            z-index: 10000; /* Ensure it’s on top */
+        }
+
+        /* Customize the font size and color of the display field in NestedList items */
+
+        /* .custom-nested-list .x-list-item .x-list-item-body {
+            font-size: 20px !important;
+            color: #333 !important;
+        } */
+
+
+    </style>
+
 </head>
-<body></body>
+<body>
+    <div id="loading-screen">Зареждам ...</div>
+</body>
 </html>
